<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"

    android:background="@color/bg_color"

    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/str_title"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/bg_btn"

        android:layout_marginBottom="30dp"

        />

    <!-- campo de login -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLogin"

        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="16dp"

        android:hint="@string/hint_login"
        android:textColorHint="@color/hint_color">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieLogin"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColor="@color/primary_color"

            android:inputType="textEmailAddress"

            android:maxLength="150"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- campo de senha -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"

        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="24dp"

        android:hint="@string/hint_password"
        android:textColorHint="@color/hint_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePassword"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColor="@color/primary_color"

            android:inputType="numberPassword"

            android:maxLength="8"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- botão de confirmar -->
    <Button
        android:id="@+id/btnLogin"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="36dp"

        android:backgroundTint="@color/bg_btn"
        android:text="@string/str_login"
        android:textColor="@color/text_btn_color"
        android:textSize="16sp"
        android:textStyle="bold"
        />


    <!-- link esqueceu a senha -->
    <TextView
        android:id="@+id/tvPassword"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"

        android:text="@string/str_forgot_pw"
        android:textColor="@color/tv_color"
        android:textSize="16sp"
        android:textStyle="bold"


        android:layout_marginBottom="30dp"
        />


    <!-- link cadastre-se -->
    <TextView
        android:id="@+id/tvSign"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"

        android:text="@string/str_sign"
        android:textColor="@color/tv_color"
        android:textSize="16sp"
        android:textStyle="bold"

        />

</LinearLayout>